# app/models/monthly_status/serializer.rb
@@ -2,5 +2,5 @@ class MonthlyStatus::Serializer
   include JSONAPI::Serializer
 
   set_type :monthly_status
-  attributes :id, :month, :year, :status
+  attributes :id, :month, :year, :status, :processing, :last_processed_at
 end
