# app/models/settlement.rb
@@ -1,0 +1,5 @@
+module Settlement
+  extend Solid::Context
+
+  self.actions = { process: Core::Settlement::Processing }
+end
