# config/routes.rb
@@ -13,6 +13,9 @@ Rails.application.routes.draw do
       resources :accounts, only: %i[index show create update destroy]
       resources :credit_cards, only: %i[index show create update destroy]
       resource :monthly_statuses, only: %i[show update]
+      resource :settlements, only: [] do
+        post :processing
+      end
 
       resources :transactions, only: %i[index show create update destroy] do
         member do
